Fix modal z-index

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -52,8 +52,9 @@
     --transition: 0.2s linear;
     --sidebar-width: 300px;
     --modal-backdrop: rgba(10, 9, 11, 0.3);
-    --modal-z-index: 1;
-    --table-z-index: 3;
+    --modal-z-index: 4;
+    --modal-backdrop-z-index: 3;
+    --table-z-index: 2;
     --modal-padding: 1rem 2rem 1.5rem 2rem;
 
     // Role colors
